[#637] Fix styling of select on iOS (#650)

--- a/src/index.scss
+++ b/src/index.scss
@@ -200,6 +200,9 @@ input {
 }
 
 select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background: $dark;
   border: none;
   border-radius: $border-radius;
